# rusty-flash-searcher

./: Cargo.toml
src/: main.rs  searcher.rs
