[package]
name = "rusty-flash-searcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
rayon = "1"
memmap2 = "0.5"
termcolor = "1.4.1"
clap = { version = "4.5.17", features = ["derive"] }